--- a/src/components/DiaryAddProductForm/DiaryAddProductForm.module.css
+++ b/src/components/DiaryAddProductForm/DiaryAddProductForm.module.css
@@ -6,6 +6,9 @@
 .form {
   display: flex;
   align-items: baseline;
+  max-width: 500px;
+  justify-content: space-between;
+  
 }
 
 .hiddenText {
@@ -55,7 +58,7 @@
 /* Опция при ховере */
 
 .selectProduct > option:hover {
-  background-color: var(--color-active);
+  background-color: #fc842d;
   color: white;
 
   transition: all 250ms linear;
@@ -68,6 +71,7 @@
   .form {
     flex-direction: column;
     align-items: center;
+    height: 200px;
   }
 
   .hiddenText {
@@ -77,4 +81,50 @@
   .hiddenIcon {
     display: none;
   }
+}
+
+.textFieldProductName{
+  width: 290px;
+  height: 26px;
+  margin-right: 40px;
+  /* border: 0; */
+  /* outline: 0; */
+  background: transparent;
+
+  font-family: 'Verdana', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.21;
+  letter-spacing: 0.04em;
+  color: #9b9faa;
+}
+
+.textFieldProductName::before{
+    left: 0;
+    right: 0;
+    bottom: 0;
+    content: "\00a0";
+    position: absolute;
+    transition: border-bottom-color 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.42);
+    pointer-events: none;
+}
+
+.weightInput{
+  margin-top: 30px;
+  width: 290px;
+  height: 26px;
+  border: 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.42);
+  /* outline: 0; */
+  background: transparent;
+
+  font-family: 'Verdana', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.21;
+  letter-spacing: 0.04em;
+  color: #9b9faa;
 }
