--- a/src/components/DailyCalorieIntake/DailyCalorieIntake.module.css
+++ b/src/components/DailyCalorieIntake/DailyCalorieIntake.module.css
@@ -53,6 +53,7 @@ hr {
   letter-spacing: 0.04;
 }
 .productList {
+  padding: 0px 0px 0px 20px;
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
@@ -62,13 +63,13 @@ hr {
 }
 @media screen and (min-width: 768px) {
   .products {
-    padding-left: 88px;
+    margin-left: 170px;
   }
 }
 
-ol {
-  padding: 0px;
-}
 .button {
   text-align: center;
+}
+.productItem {
+  list-style: value;
 }
